Insert new div for courses

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Lets Code Academy</title>
 </head>
 <body>
-    
     <h1>Ada - Lets code</h1>
     <h2>Escolha um curso para iniciar hoje mesmo</h2>
+    <div class="devops">
+        <h2>DevOps</h2>
+    </div>
 </body>
 </html>
